removed flex-wrap on slick-track scss to fix issue

--- a/assets/scss/components/foundation/tabs/_tabs.scss
+++ b/assets/scss/components/foundation/tabs/_tabs.scss
@@ -13,7 +13,7 @@
     .slick-track {
       display: flex;
       //flex-wrap: wrap;
-      //width: 100% !important;
+      width: 100% !important;
 
       .productCarousel-slide {
         width: 20% !important;
